se cambio intervalo de eventos y swagger endpoint
