# docs/swagger.json
@@ -356,6 +356,29 @@
         }
     },
     "definitions": {
+        "entities.EnergyPlants": {
+            "type": "object",
+            "properties": {
+                "capacityMW": {
+                    "type": "number"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "plantName": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
         "entities.EventEntity": {
             "type": "object",
             "properties": {
@@ -373,6 +396,17 @@
                     "type": "string"
                 },
                 "metadata": {
+                    "type": "string"
+                },
+                "plant_source": {
+                    "description": "Relaciones",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/entities.EnergyPlants"
+                        }
+                    ]
+                },
+                "plant_source_id": {
                     "type": "string"
                 },
                 "source": {
